syntax = "proto3";

package poll;

import "shared.proto";

option java_multiple_files = true;
option java_package = "com.pollvite.grpc.user";
option java_outer_classname = "UserProto";

service IdentityService {
  rpc getUserProfileByUUID (shared.IdPb) returns (UserProfileFullPb) {}
  rpc getUserProfileByPublicId (shared.IdPb) returns (UserProfilePublicPb) {}
  rpc getUserProfilesByPublicIds (stream shared.IdPb) returns (stream UserProfilePublicPb) {}
  rpc createUserProfile (UserProfileCreatePb) returns (UserProfileFullPb) {}
  rpc updateUserProfile (UserProfileUpdatePb) returns (UserProfileFullPb) {}
  rpc beginDeleteUserByUUID (shared.IdPb) returns (UserProfileFullPb) {}
}

message UserProfilePublicPb {
  string publicId = 1;
  string userName = 2;
}

message UserProfileFullPb {
  string publicId = 1;
  string uuid = 2;
  string userName = 3;
}

message UserProfileCreatePb {
  string uuid = 2;
  string userName = 3;
}


message UserProfileUpdatePb {
  string publicId = 1;
  string userName = 2;
}